@@ -9,18 +9,12 @@
 #include <pqxx/notify-listen>
 #include <pqxx/result>
 
+#include "test_helpers.hxx"
 
 using namespace PGSTD;
 using namespace pqxx;
 
 // Example program for libpqxx.  Send notification to self.
-//
-// Usage: test004 [connect-string]
-//
-// Where connect-string is a set of connection options in Postgresql's
-// PQconnectdb() format, eg. "dbname=template1" to select from a database
-// called template1, or "host=foo.bar.net user=smith" to connect to a
-// backend running on host foo.bar.net, logging in as user smith.
 
 namespace
 {
@@ -81,64 +75,39 @@ public:
   }
 };
 
+
+void test_004()
+{
+  connection C("");
+  cout << "Adding listener..." << endl;
+  TestListener L(C);
+
+  cout << "Sending notification..." << endl;
+  C.perform(Notify(L.name()));
+
+  int notifs = 0;
+  for (int i=0; (i < 20) && !L.Done(); ++i)
+  {
+    PQXX_CHECK_EQUAL(notifs, 0, "Got unexpected notifications.")
+
+    // Sleep one second using a libpqxx-internal function.  Kids, don't try
+    // this at home!  The pqxx::internal namespace is not for third-party use
+    // and may change radically at any time.
+    pqxx::internal::sleep_seconds(1);
+    notifs = C.get_notifs();
+    cout << ".";
+  }
+  cout << endl;
+
+  PQXX_CHECK_NOT_EQUAL(L.Done(), false, "No notification received.")
+  PQXX_CHECK_EQUAL(notifs, 1, "Got too many notifications.")
+}
+
 } // namespace
 
 
-int main(int, char *argv[])
+int main()
 {
-  try
-  {
-    connection C(argv[1]);
-    cout << "Adding listener..." << endl;
-    TestListener L(C);
-
-    cout << "Sending notification..." << endl;
-    C.perform(Notify(L.name()));
-
-    int notifs = 0;
-    for (int i=0; (i < 20) && !L.Done(); ++i)
-    {
-      if (notifs)
-	throw logic_error("Got " + to_string(notifs) +
-	    " unexpected notification(s)!");
-      // Sleep one second using a libpqxx-internal function.  Kids, don't try
-      // this at home!  The pqxx::internal namespace is not for third-party use
-      // and may change radically at any time.
-      pqxx::internal::sleep_seconds(1);
-      notifs = C.get_notifs();
-      cout << ".";
-    }
-    cout << endl;
-
-    if (!L.Done())
-    {
-      cout << "No notification received!" << endl;
-      return 1;
-    }
-    if (notifs != 1)
-      throw logic_error("Expected 1 notification, got " + to_string(notifs));
-  }
-  catch (const sql_error &e)
-  {
-    // If we're interested in the text of a failed query, we can write separate
-    // exception handling code for this type of exception
-    cerr << "SQL error: " << e.what() << endl
-         << "Query was: '" << e.query() << "'" << endl;
-    return 1;
-  }
-  catch (const exception &e)
-  {
-    // All exceptions thrown by libpqxx are derived from std::exception
-    cerr << "Exception: " << e.what() << endl;
-    return 2;
-  }
-  catch (...)
-  {
-    // This is really unexpected (see above)
-    cerr << "Unhandled exception" << endl;
-    return 100;
-  }
-
-  return 0;
+  return test::pqxxtest(test_004);
 }
 
